--- a/Explorer/Explorer/Explorer.csproj
+++ b/Explorer/Explorer/Explorer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -11,7 +11,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Icons\app.ico" />
+    <None Remove="Icons\file.ico" />
+    <None Remove="Icons\folder.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Icons\app.ico" />
+    <EmbeddedResource Include="Icons\file.ico" />
+    <EmbeddedResource Include="Icons\folder.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />  
-    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />  
+    <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.3.0.991250" />
   </ItemGroup>
 </Project>
